Update docker compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,13 +7,16 @@ services:
     #  ZEPPELIN_LOG_DIR: '/logs'
     #  ZEPPELIN_NOTEBOOK_DIR: '/notebook'
     ports:
-      - 8089:8080
+      - 8099:8080
     networks:
       - spark-net
     volumes:
-    - ./notebook:/opt/zeppelin/notebook
-    - ./logs:/opt/zeppelin/logs
-    - ./conf:/opt/zeppelin/conf
+      - ./notebook:/opt/zeppelin/notebook
+      - ./logs:/opt/zeppelin/logs
+      - ./conf:/opt/zeppelin/conf
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.zeppelin.rule=Host(`zeppelin.bdb`)"
 
 networks:
   spark-net:
