--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   zeppelin:
-    image: apache/zeppelin:0.9.0
+    image: ${USERNAME}/zeppelin:master
     #environment:
     #  ZEPPELIN_LOG_DIR: '/logs'
     #  ZEPPELIN_NOTEBOOK_DIR: '/notebook'
